--- a/css-structure_custom-properties/css/styles.css
+++ b/css-structure_custom-properties/css/styles.css
@@ -1,3 +1,5 @@
+@import "global.css";
+
 *,
 *::before,
 *::after {
@@ -11,12 +13,12 @@ body {
 }
 
 header {
-  background: rgb(37 38 41 / 100%);
+  background: var(--color-black);
 }
 
 h1 {
   text-align: center;
-  color: white;
+  color: var(--color-white);
   line-height: 1.4;
   margin: 0;
   letter-spacing: 0.025em;
@@ -29,7 +31,7 @@ h2 {
 }
 
 strong {
-  color: #ff4a11;
+  color: var(--color-orange);
 }
 
 section {
@@ -57,12 +59,12 @@ figure {
   gap: 10px;
   margin: 0;
   padding: 10px;
-  background-color: #ff4a11ff;
-  border-radius: 4px;
+  background-color: var(--color-orange);
+  border-radius: var(--border-radius-def);
 }
 
 figcaption {
-  color: rgb(255 255 255);
+  color: var(--color-white);
 }
 
 nav {
@@ -75,25 +77,25 @@ a {
   display: inline-block;
   font-size: smaller;
   padding: 8px;
-  border-radius: 4px;
-  background-color: hsl(14 100% 53%);
-  color: #fff;
+  border-radius: var(--border-radius-def);
+  background-color: var(--color-orange);
+  color: var(--color-white);
 }
 
 a:hover,
 a:focus-visible {
-  background-color: rgb(37 38 41);
+  background-color: var(--color-black);
   text-decoration: none;
 }
 
 mark {
-  background-color: rgb(255 74 17);
+  background-color: var(--color-orange);
   color: #ffffff;
-  border-radius: 4px;
+  border-radius: var(--border-radius-def);
   letter-spacing: 0.025em;
 }
 
 ::selection {
-  background-color: #252629;
-  color: #ff4a11;
+  background-color: var(--color-black);
+  color: var(--color-orange);
 }
