--- a/css-responsive_playground/css/styles.css
+++ b/css-responsive_playground/css/styles.css
@@ -62,15 +62,26 @@ h1 {
 .box--one {
   background-color: lightblue;
 
-  width: 100px;
+  width: 50%;
   height: 100px;
 }
 
-.box--two {
-  background-color: lightgreen;
+@media screen and (min-width: 600px) {
+  .box--two {
+    background-color: lightgreen;
 
-  width: 100px;
-  height: 100px;
+    width: 200px;
+    height: 100px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .box--two {
+    background-color: lightgreen;
+
+    width: 400px;
+    height: 100px;
+  }
 }
 
 .box--three {
@@ -80,11 +91,29 @@ h1 {
   height: 250px;
 }
 
+@media screen and (orientation: landscape) {
+  .box--three {
+    background-color: lightpink;
+
+    width: 100%;
+    height: 250px;
+  }
+}
+
 .box--four {
   background-color: lightgray;
 
   width: 100px;
   height: 100px;
+}
+
+@media screen and (prefers-color-scheme: dark) {
+  .box--four {
+    background-color: rgb(20, 20, 20);
+
+    width: 100px;
+    height: 100px;
+  }
 }
 
 .box--five {
