finished tablet view

--- a/css-responsive_responsive-website/css/styles.css
+++ b/css-responsive_responsive-website/css/styles.css
@@ -244,10 +244,29 @@ width, etc. */
 
 /* Media Query Tablet */
 /* --- */
-/* Replace this comment with your media query. */
+
+@media (min-width: 600px) {
+  .card-section {
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+  }
+  .product-card {
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+    height: 250px;
+  }
+  .intro-text {
+    width: 40%;
+  }
+}
+
 /* --- */
 
 /* Media Query Desktop */
 /* --- */
-/* Replace this comment with your media query. */
+@media (min-width: 1024px) {
+}
+
 /* --- */
